When typing Compose sequences, continuation keys are also typed #114609

Closed
opened 2023-11-08 01:46:07 +01:00 by Phoenix-Katsch · 1 comment

System Information
Operating system: Arch Linux, 6.5.9-arch2-1 #1 SMP PREEMPT_DYNAMIC Thu, 26 Oct 2023 00:52:20 +0000 x86_64 GNU/Linux; KDE (Wayland)
Graphics card: AMD Ryzen 7 4800H with Radeon Graphics / NVIDIA GeForce GTX 1660 Ti

Blender Version
Broken: 4.1.0 Alpha, 9410644795, main, 2023-11-07 21:31
Broken: 4.0.0 Beta, abe925d0c6, 2023-11-06 20:53
Worked: 3.6.5 (doesn't handle compose sequences at all)

Short description of error
On Wayland, when typing Compose sequences that don't consist of entirely dead keys, continuation keys are incorrectly also typed.

Exact steps for others to reproduce the error

  • Enable the Compose key. With KDE, this is in System Settings -> Input Devices -> Keyboard -> Advanced -> Position of Compose Key. I'm not sure how you'd do this with other window managers.
  • Open Blender
  • Open a text box (for example, with F2)
  • Use a compose sequence that doesn't contain dead keys (for example, <Compose> <a> <grave>, or <Compose>, then a, then `, where <Compose> is the key that you've set to be the Compose key. For me this is Right Alt.)
  • Result: "aà", instead of "à".
**System Information** Operating system: Arch Linux, 6.5.9-arch2-1 #1 SMP PREEMPT_DYNAMIC Thu, 26 Oct 2023 00:52:20 +0000 x86_64 GNU/Linux; KDE (Wayland) Graphics card: AMD Ryzen 7 4800H with Radeon Graphics / NVIDIA GeForce GTX 1660 Ti **Blender Version** Broken: 4.1.0 Alpha, 94106447950c, main, 2023-11-07 21:31 Broken: 4.0.0 Beta, abe925d0c671, 2023-11-06 20:53 Worked: 3.6.5 (doesn't handle compose sequences at all) **Short description of error** On Wayland, when typing Compose sequences that don't consist of entirely dead keys, continuation keys are incorrectly also typed. <video src="/attachments/b925e24b-86d7-44af-af51-6fc835b4a052" controls></video> **Exact steps for others to reproduce the error** - Enable the Compose key. With KDE, this is in System Settings -> Input Devices -> Keyboard -> Advanced -> Position of Compose Key. I'm not sure how you'd do this with other window managers. - Open Blender - Open a text box (for example, with <kbd>F2</kbd>) - Use a compose sequence that doesn't contain dead keys (for example, `<Compose> <a> <grave>`, or <kbd>\<Compose></kbd>, then <kbd>a</kbd>, then <kbd>`</kbd>, where \<Compose> is the key that you've set to be the Compose key. For me this is Right Alt.) - Result: "aà", instead of "à".
Phoenix-Katsch added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-08 01:46:08 +01:00
Iliya Katushenock added the
Interest
Wayland
label 2023-11-08 06:27:22 +01:00
Iliya Katushenock changed title from [Wayland] When typing Compose sequences, continuation keys are also typed. to When typing Compose sequences, continuation keys are also typed 2023-11-08 06:27:31 +01:00
Iliya Katushenock added the
Interest
User Interface
label 2023-11-08 06:27:50 +01:00
Member

Confirming since we've PR already. Thanks @Phoenix-Katsch
@ideasman42 , can you check (both bug and PR)? 🙂

Confirming since we've PR already. Thanks @Phoenix-Katsch @ideasman42 , can you check (both bug and PR)? 🙂
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-30 06:45:08 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114609
No description provided.